--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <html>
 
 <head>
-    <title>Six Eighty Hotel</title>
+    <title>Tafaria Hotel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <div class="container">
+        <h1 class="title">Street Kitchen</h1>
+    </div>
+
+    <div class="top-menu">
+        <ul>
+            <li><a href="index.html">Home</a>"</li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+    </div>
+
+    <img class="main-img" src="wasa-1.jpg" alt="header image">
+
+    <table>
+        <tr>
+            <td>
+                <img src="r-1.jpg" alt="good image">
+            </td>
+
+            <td>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et maxime omnis impedit facilis repudiandae, sed iusto est dignissimos, optio reiciendis commodi corrupti aut eius magni totam harum, hic a iure quaerat nisi voluptatum maiores dolor amet neque? Deleniti reprehenderit similique repudiandae natus minima, aperiam aliquid, asperiores quae id laudantium, voluptas modi velit tenetur vitae? Sint esse maxime vitae perspiciatis dignissimos cupiditate saepe suscipit dolores eos sapiente. 
+                    Hic inventore ullam at nisi excepturi atque, alias facilis ea architecto quod fugiat culpa deleniti iusto voluptatum, est maiores vel exercitationem, in libero dolore odit! Ullam ipsam deserunt sunt,
+                    <br> tenetur velit quam vero deleniti. ipsum dolor sit amet consectetur adipisicing elit. Veniam illum repellat quidem, 
+                    <br>neque suscipit amet ut, atque in non hic accusamus 
+                </p>
+            </td>
+        </tr>
+    </table>
+
+    <p class="credits">
+        Designed by Churchill Kanakania
+    </p>
+
+
 
 </body>
 </html>
